# Avernus

./: .gitignore  CMakeLists.txt  README.md
src/: camera.h  filesystem.h  glad.c  main.cpp  settings.h  shader.h  shapes.cpp  shapes.h  window.cpp  window.h
src/helpers/: settings.h.in
